--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body, html {
 }
 
 .parallax-bg {
-  background-image: url('./https://i.imgur.com/8Zr8jU0.jpeg');
+  background-image: url('./cosmos.jpg');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
