--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body, html {
 }
 
 .parallax-bg {
-  background-image: url('./cosmos.jpg');
+  background-image: url('cosmos.jpg');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -18,8 +18,8 @@ body, html {
   height: 100%;
   width: 100%;
   z-index: -2;
-  opacity: 0.2;
-  animation: pulse 40s ease-in-out infinite alternate;
+  opacity: 1 !important;      /* Force full visibility */
+  border: 5px solid red;      /* Debug outline */
 }
 
 @keyframes pulse {
@@ -29,6 +29,7 @@ body, html {
 
 .overlay {
   position: relative;
+  z-index: 1; /* Add this */
   padding: 40px 20px;
   max-width: 800px;
   margin: auto;
