--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body, html {
 }
 
 .parallax-bg {
-  background-image: url('cosmos.jpg'); /* use local version */
+  background-image: url('cosmos.jpeg'); /* use local version */
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
